--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,11 +71,23 @@
   
 	
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/carfax/job/ovcsbfw4'>CARFAX Careers - Data Quality Analyst</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698607225-associate-director-data-analysis'>Publicis Groupe Associate Director, Data & Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/datacom.co.nz/c4a6638a-f1e9-40c6-a8cb-f14ad8e1776e'>Datacom - Service Desk Analyst - Auckland</a></h5> 
+<h5><a href='https://jobs.jobvite.com/myokardia/job/oSmsbfwB'>MyoKardia, Inc. Careers - Principal, PV Data & Quality Analyst</a></h5> 
+<p><span class="badge badge-light">South San Francisco, California</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698606348-co-op-statistical-genetics-genetic-epidemiology-human-target-validation-core-'>Biogen Co-op: Statistical Genetics & Genetic Epidemiology (Human Target Validation Core) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Cambridge, MA</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/carfax/job/ovcsbfw4'>CARFAX Careers - Data Quality Analyst</a></h5> 
+<p><span class="badge badge-light">Centreville, Virginia</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/c4a6638a-f1e9-40c6-a8cb-f14ad8e1776e'>Datacom - Service Desk Analyst - Auckland</a></h5> 
 <p><span class="badge badge-light">Auckland  Auckland  Auckland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -99,7 +111,7 @@
 <p><span class="badge badge-light">Washington, DCWashington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://grofers.recruiterbox.com/jobs/fk03d44'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://grofers.recruiterbox.com/jobs/fk03d44'>
     Data Analyst  at Grofers
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -121,7 +133,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698571404-principal-analyst-statistical-programming-r-d-'>Biogen Principal Analyst, Statistical Programming (R&D) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698571404-principal-analyst-statistical-programming-r-d-'>Biogen Principal Analyst, Statistical Programming (R&D) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -145,7 +157,7 @@
 <p><span class="badge badge-light">United States  Portland, OR</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-lexisnexis-risk-solutions-cardiff-27560'>Data Analyst - LexisNexis Risk Solutions  - Cardiff - RELX Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-lexisnexis-risk-solutions-cardiff-27560'>Data Analyst - LexisNexis Risk Solutions  - Cardiff - RELX Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -217,7 +229,7 @@
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://lewisham.referrals.selectminds.com/jobs/trainee-data-analyst-995'>Trainee Data Analyst - Lewisham Jobs Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lewisham.referrals.selectminds.com/jobs/trainee-data-analyst-995'>Trainee Data Analyst - Lewisham Jobs Careers</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -245,7 +257,7 @@
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://formarshgroup.applytojob.com/apply/RqDqOIB5y1/Senior-Survey-Statistician'>Senior Survey Statistician - Fors Marsh Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://formarshgroup.applytojob.com/apply/RqDqOIB5y1/Senior-Survey-Statistician'>Senior Survey Statistician - Fors Marsh Group - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -257,7 +269,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/desmos/66ffa184-9a07-40ca-91d3-346b1e648dbd'>Desmos - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/desmos/66ffa184-9a07-40ca-91d3-346b1e648dbd'>Desmos - Data Analyst</a></h5> 
 <p><span class="badge badge-light">United States San Francisco</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -277,7 +289,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mediamolecule/jobs/4495997002'>Job Application for Data Analyst at Media Molecule</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mediamolecule/jobs/4495997002'>Job Application for Data Analyst at Media Molecule</a></h5> 
 <p><span class="badge badge-light">Guildford  Guildford</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -317,7 +329,7 @@
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/the-climate-corporation/job/oKPpbfwT'>The Climate Corporation Careers - Intern: Data Analyst (Summer 2020)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/the-climate-corporation/job/oKPpbfwT'>The Climate Corporation Careers - Intern: Data Analyst (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -465,7 +477,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://doxo.recruiterbox.com/jobs/fk01nzn/'>
+<h5><a href='https://doxo.recruiterbox.com/jobs/fk01nzn/'>
     Data Analyst - SEM at doxo
 </a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
@@ -474,20 +486,6 @@
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oDwkbfwo&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n9YImMws'>Freedom Financial Network Careers - Sr. Data Analyst (3 Positions Available)</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='http://zigzag.applytojob.com/apply/L801H9qnkN/Data-Analyst-Sales-Operations'>Data Analyst & Sales Operations - ZigZag Careers - Career Page</a></h5> 
-<p><span class="badge badge-light">Philippines</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Junior-Data-Analyst'>Junior Data Analyst - Cover - Career Page</a></h5> 
-<p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://searchmetrics.recruitee.com/o/technical-account-manager-data-analyst-mwd-integrations-reportings'>
-      Technical Account Manager / Data Analyst (m/w/d) - Integrations & Reportings - Searchmetrics GmbH
-    </a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-10-28</p>
 <hr/>
 
 
